--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -10,7 +10,9 @@ numpy==1.26.4
 Pillow==10.2.0
 transformers==4.38.2
 opencv-python==4.9.0.80
-streamlit_audio_recorder
+
+streamlit-audio-recorder==0.1.5
+
 scipy==1.12.0
 pygame==2.5.2
 assemblyai==0.20.0
