--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -14,3 +14,4 @@ pygame==2.5.2
 assemblyai==0.20.0
 google-generativeai==0.4.0
 wave==0.0.2
+streamlit-audio-recorder @ git+https://github.com/stefanrmmr/streamlit-audio-recorder.git
