--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -14,4 +14,5 @@ pygame==2.5.2
 assemblyai==0.20.0
 google-generativeai==0.4.0
 wave==0.0.2
-streamlit-audio-recorder @ git+https://github.com/stefanrmmr/streamlit-audio-recorder.git
+git+https://github.com/stefanrmmr/streamlit-audio-recorder.git#egg=streamlit-audiorec
+
