--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -9,7 +9,7 @@ numpy==1.26.4
 Pillow==10.2.0
 transformers==4.38.2
 opencv-python-headless==4.9.0.80
-
+dlib
 scipy==1.12.0
 pygame==2.5.2
 assemblyai==0.20.0
