--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -9,9 +9,9 @@ requests==2.31.0
 scipy
 
 
-
 streamlit==1.30.0
 streamlit-webrtc==0.45.0
 mediapipe==0.10.9
 numpy==1.24.4
 pygame==2.5.2
+opencv-python-headless==4.5.3.56  # This should work with mediapipe and avoid GUI issues
