--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -9,8 +9,7 @@ requests==2.31.0
 scipy
 
 streamlit==1.30.0
-mediapipe==0.10.9
-numpy==1.24.4
-pygame==2.5.2
-streamlit-webrtc==0.45.0
-  # This should work with mediapipe and avoid GUI issues
+transformers
+torch
+pygame
+
