--- a/SmartDriver/requirements.txt
+++ b/SmartDriver/requirements.txt
@@ -1,19 +1,14 @@
-﻿streamlit==1.30.0
-firebase-admin==6.3.0
-folium==0.15.1
-streamlit-folium==0.13.0
-requests==2.31.0
-cloudinary
+streamlit
+firebase-admin
+folium
+streamlit-folium
+requests
 torch
+numpy
+Pillow
+transformers
+cloudinary
 
-scipy
-
-streamlit==1.30.0
-
-
-
-streamlit==1.30.0
 streamlit-webrtc==0.46.0
 
-numpy
 
